Products.GenericSetup Changelog
===============================

1.6.0 (unreleased)
------------------

- Fixed bug in the export code of persistent utilities with explicit OFS ids.

- Prefer the class over the five:implements ZCML directive.

1.5.0 (2010-01-01)
------------------

- The components handler now ensures there is a valid component
  registry (not the global registry) before importing or exporting.

- Make sure the Import ZMI tab does not blow up if no base profile
  has been selected, and make it a little more user-friendly.

- Log if the components handler runs and has nothing to import.

- Use five.formlib in favor of Products.Five.formlib if it is available.

- Removed testing dependency on zope.app.testing.ztapi.

- tarball contexts: Fixed export and import of directory structures.


1.5.0b1 (2009-09-25)
--------------------

- LP #388380:  removed obsolute STX docs from the package directory.

- Made export / import features for old-school TextIndex (removed in Zope 2.12)
  conditional.

- Added support for import / export of subscribers from component registry.

- Adapter removal.

- Fix utility removal so utility is not added when it is missing from the
  local component registry.

- Fixed component handler to use ``for`` not ``for_`` in adapter directive. 
  To support import of existing profiles ``for_`` is used as a fallback.

- Changed testing.py to directly load zope.traversing's ZCML instead of going
  via the Five traversing.zcml BBB shim.

- Added new feature to the component handler. For factory based utilities you
  can now specify an additional id. All factory based utilities will now by
  default be added to the site manager (being an ObjectManager itself) as an
  object and this persistent object is registered as the utility. On removal
  both the registration and the object are removed. The new id argument is
  used to specify the id of the object as set via `__name__`. This change